# ai-monk

./: .gitignore  README.md  pyproject.toml  requirements.txt
Projects/FeedbackAnalysis/: README.md  pyproject.toml
Projects/FeedbackAnalysis/app/: main.py  main_ui.py
Projects/FeedbackAnalysis/constants/: constants.py
Projects/FeedbackAnalysis/core/: csv_loader.py
Projects/FeedbackAnalysis/data/: app_store_reviews.csv  app_store_reviews_full_set.csv  expected_classifications.csv  expected_classifications_full_set.csv  support_emails.csv  support_emails_full_set.csv
Projects/FeedbackAnalysis/graphs/: feedback_graph.py
Projects/FeedbackAnalysis/nodes/: analyzer.py  classifier.py  ticket_creator.py  validation.py
Projects/FeedbackAnalysis/prompts/: bug_analysis.py  classifier.py  feature_analysis.py  validation.py
Projects/FeedbackAnalysis/results/: generated_tickets.csv
Projects/FeedbackAnalysis/schema/: feedback.py  ticket.py  validation.py
Projects/FeedbackAnalysis/state/: agent_state.py
Projects/LangServeDemo/: .env.example  README.md  pyproject.toml
Projects/LangServeDemo/app/: client.py
Projects/LangServeDemo/core/: service.py
Projects/LangServeDemo/servers/: server.py  server_new.py
Projects/LangServeDemo/servers/nodes/: request_validator_node.py
Projects/LegalDocReview/: README.md  Result.txt  pyproject.toml
Projects/LegalDocReview/app/: build_vector_store.py  main.py
Projects/LegalDocReview/constants/: constants.py
Projects/LegalDocReview/core/: build_index.py  embeddings.py  llm.py  pdf_loader.py  vector_search.py
Projects/LegalDocReview/prompts/: generate.md
Projects/LegalDocReview/scripts/: llm.py  pdf_loader.py
Projects/LegalDocReview/vector_stores/: index.faiss  index.pkl
Projects/ResumeScreening/: .env.example  README.md  pyproject.toml
Projects/ResumeScreening/app/: main.py
Projects/ResumeScreening/constants/: constants.py
Projects/ResumeScreening/core/: chroma_db_handler.py  docx_loader.py  pdf_loader.py  txt_loader.py
Projects/ResumeScreening/data/: Job_description.txt
Projects/ResumeScreening/prompts/: query.md  system.md
Projects/ResumeScreening/vector_store/: chroma.sqlite3
data/: ai_agents_build.docx  (+5 more)
(+25 files in other folders)
