[project]
name = "feedbackanalysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.9"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-nvidia-ai-endpoints>=1.0.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]
[tool.pyright]
reportArgumentType = false
