[project]
name = "legaldocreview"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11.14"
dependencies = [
    "faiss-cpu>=1.13.1",
    "langchain-community>=0.4.1",
    "langchain-nvidia-ai-endpoints>=1.0.0",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.4.2",
]
